--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^5.16.7",
     "@mui/x-data-grid": "^7.12.1",
+    "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5"
   }
 }
