--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "description": "",
   "devDependencies": {
     "@types/react": "^18.3.3",
+    "@types/react-beautiful-dnd": "^13.1.8",
+    "@types/react-dom": "^18.3.0",
     "copyfiles": "^2.4.1",
     "rimraf": "^6.0.1",
     "typescript": "^5.5.4"
@@ -37,6 +39,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^5.16.7",
     "@mui/x-data-grid": "^7.12.1",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5"
   }
